# netify-plugin-fwa

./: .gitignore  Makefile.am  configure.ac
deploy/openwrt/: Makefile
deploy/openwrt/files/etc/config/: netify-fwa
include/: nfwa-plugin.hpp
src/: Makefile.am  nfwa-plugin.cpp
